# executor

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  merge.yml  pr.yml
src/executor/: cli.py  entities.py  web.py
tests/: conftest.py  test_execute_bash.py
